apps/mealie/environments/manifest.yaml
---
# Source: homelab/charts/mealie/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    helm.sh/chart: mealie-0.1.6
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9925
      targetPort: 9000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
---
# Source: homelab/charts/mealie/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:
    helm.sh/chart: mealie-0.1.6
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
      app.kubernetes.io/instance: mealie
  template:
    metadata:
      labels:
        helm.sh/chart: mealie-0.1.6
        app.kubernetes.io/name: mealie
        app.kubernetes.io/instance: mealie
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: mealie
      securityContext:
        {}
      containers:
        - name: mealie
          image: "ghcr.io/mealie-recipes/mealie:v3.9.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /app/data
              name: pvc-mealie-data
              readOnly: false
      volumes:
        - name: pvc-mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
---
# Source: homelab/charts/mealie/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  labels:
    helm.sh/chart: mealie-0.1.6
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "mealie.kyledev.co"
    - "mealie.int.kyledev.co"
    - "mealie.ts.kyledev.co"
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: mealie
        port: 9925
---
# Source: homelab/charts/mealie/templates/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: mealie
  labels:
    helm.sh/chart: mealie-0.1.6
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: mealie
  extAuth:
    grpc:
      backendRefs:
      - group: ""
        kind: Service
        name: homelab-envoy-proxy-bouncer
        namespace: envoy-gateway-system
        port: 8080
